spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ body {
 
 .appContainer {
   max-width: 1200px;
-  padding: 1rem;
+  padding: 1.5rem 1rem 1rem;
   margin: auto;
 
   @media (min-width: 768px) {
