--- a/src/components/cardimage/cardImage.scss
+++ b/src/components/cardimage/cardImage.scss
@@ -14,14 +14,20 @@
   .cardImage {
     max-width: 500px;
     display: grid;
-    gap: 0.8rem;
+    gap: 0.75rem;
     background: linear-gradient(50deg, rgb(235, 48, 48), rgb(83, 83, 226));
     color: white;
     border-radius: 7px;
-    padding: 1.5rem;
+    padding: 1.1rem;
     text-transform: uppercase;
     letter-spacing: 0.5px;
     position: relative;
+
+    @media (min-width: 640px) {
+      align-self: flex-start;
+      padding: 1.5rem;
+      gap: 0.65rem !important;
+    }
 
     p {
       font-size: 0.8rem;
@@ -29,8 +35,8 @@
     }
 
     img {
-      width: 70px;
-      height: 55px;
+      width: 68px;
+      height: 53px;
       mix-blend-mode: darken;
     }
 
@@ -61,9 +67,15 @@
 
       @media (min-width: 640px) {
         gap: 1.5rem;
-        grid-template-columns: 1fr 1fr;
       }
       div {
+        grid-column: span 2;
+
+        @media (min-width: 640px) {
+          grid-column: span 1;
+          gap: 1.5rem;
+        }
+
         label {
           display: block;
           margin-bottom: 0.75rem;
@@ -123,7 +135,7 @@
         }
 
         & span:after {
-          border: solid white;
+          border: 4px solid white;
           border-radius: 50%;
         }
 
