--- a/src/components/paymentdetails/paymentdetails.scss
+++ b/src/components/paymentdetails/paymentdetails.scss
@@ -51,6 +51,10 @@
     font-weight: bold;
     font-size: 1.5rem;
 
+    @media (max-width: 400px) {
+      margin-top: 0.75rem;
+    }
+
     @media (min-width: 768px) {
       font-size: 1.7rem;
     }
